# Signal-Chicago

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  refresh-schedules.yml
config/: stations.json
dashboard/: .env.example  README.md  package-lock.json  package.json  pnpm-lock.yaml
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/lib/: signal-data.ts
dashboard/public/: _headers
deploy/: .env.cloud.example
deploy/postgres/: schema.sql
docs/: ARCHITECTURE.md  CLOUD_OWNERSHIP.md  FREE_CLOUD_SETUP.md  OPERATIONS.md  PRODUCT_BRIEF.md  ROADMAP.md
src/cta_reliability/: __init__.py  analytics.py  cli.py  collector.py  config.py  gtfs.py  ridership.py  schedule_headways.py  train_tracker.py  warehouse.py
supabase/: config.toml
supabase/functions/: .env.example
supabase/functions/_shared/: stations.ts
supabase/functions/collect-cta/: index.ts
supabase/migrations/: 202607130001_signal_chicago.sql  202607130002_fix_schedule_refresh.sql
supabase/setup/: schedule_collector.sql.example
tests/: test_collector.py  test_gtfs.py  test_ridership.py  test_schedule_headways.py  test_stability.py  test_train_tracker.py
