[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "cta-transit-reliability"
version = "0.1.0"
description = "Reproducible analytics pipeline for Chicago transit reliability and ridership."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Akash Chenchugan" }]
dependencies = ["certifi>=2025.1.31"]

[project.scripts]
cta-pipeline = "cta_reliability.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
